fixtures/valid/todo-with-archived.crumb
BEGIN CRUMB
v=1.1
kind=todo
title=Prospective memory
source=cli
---
[tasks]
- [ ] Write conformance manifest
- [ ] Add round-trip tests
- [x] Bump version

[archived]
- [x] Add formal ABNF
- [x] Declare v=1.1 stable
END CRUMB
